--- a/index.html
+++ b/index.html
@@ -171,6 +171,7 @@
       flex: 1;
       overflow-y: auto;
       padding: 0 8px;
+      position: relative;
     }
     .selector-row {
       display: flex;
@@ -232,6 +233,30 @@
       text-decoration: underline;
       cursor: pointer;
     }
+
+    /* Bible Nav Buttons */
+    #bible-nav-buttons {
+      position: absolute;
+      bottom: 16px;
+      left: 50%;
+      transform: translateX(-50%);
+      display: none;
+      gap: 12px;
+      z-index: 20;
+    }
+    #bible-nav-buttons button {
+      background: var(--accent);
+      color: white;
+      border: none;
+      width: 40px;
+      height: 40px;
+      border-radius: 50%;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      font-size: 1.1rem;
+      box-shadow: var(--shadow);
+    }
   </style>
 </head>
 <body>
@@ -277,6 +302,11 @@
       </div>
       <div class="verse-display" id="verse-display">
         உங்கள் சாதனத்திலிருந்து ஒரு பைபிள் JSON கோப்பை ஏற்றவும்.
+      </div>
+      <!-- Temporary Nav Buttons -->
+      <div id="bible-nav-buttons">
+        <button onclick="navigateBibleChapter(-1)" aria-label="Previous Chapter"><i class="fas fa-chevron-left"></i></button>
+        <button onclick="navigateBibleChapter(1)" aria-label="Next Chapter"><i class="fas fa-chevron-right"></i></button>
       </div>
     </div>
   </div>
@@ -382,6 +412,64 @@
       });
       display.innerHTML = html || 'வசனங்கள் கிடைக்கவில்லை.';
     }
+
+    // === Bible Nav Buttons Logic ===
+    let bibleNavTimeout = null;
+    function showBibleNavButtons() {
+      if (currentView !== 'bible') return;
+      const nav = document.getElementById('bible-nav-buttons');
+      nav.style.display = 'flex';
+      if (bibleNavTimeout) clearTimeout(bibleNavTimeout);
+      bibleNavTimeout = setTimeout(() => {
+        nav.style.display = 'none';
+      }, 3000); // hide after 3 seconds
+    }
+    function navigateBibleChapter(direction) {
+      const bookSelect = document.getElementById('book-select');
+      const chapterSelect = document.getElementById('chapter-select');
+      if (bookSelect.disabled || chapterSelect.disabled) return;
+
+      let bookIndex = parseInt(bookSelect.value);
+      let chapterIndex = parseInt(chapterSelect.value);
+      if (isNaN(bookIndex) || isNaN(chapterIndex)) return;
+
+      const totalChapters = TAMIL_BIBLE.books[bookIndex].chapters.length;
+
+      if (direction === -1) {
+        // Previous chapter
+        if (chapterIndex > 0) {
+          chapterIndex--;
+        } else if (bookIndex > 0) {
+          bookIndex--;
+          chapterIndex = TAMIL_BIBLE.books[bookIndex].chapters.length - 1;
+        } else {
+          return; // at Genesis 1
+        }
+      } else if (direction === 1) {
+        // Next chapter
+        if (chapterIndex < totalChapters - 1) {
+          chapterIndex++;
+        } else if (bookIndex < TAMIL_BIBLE.books.length - 1) {
+          bookIndex++;
+          chapterIndex = 0;
+        } else {
+          return; // at Revelation end
+        }
+      }
+
+      bookSelect.value = bookIndex;
+      loadChapters();
+      chapterSelect.value = chapterIndex;
+      loadVerses();
+      showBibleNavButtons(); // keep visible after navigation
+    }
+
+    // Attach touch/click listener to Bible view
+    document.getElementById('bible-view').addEventListener('click', (e) => {
+      if (e.target.closest('#bible-nav-buttons')) return;
+      showBibleNavButtons();
+    });
+
     // === BIBLE REFERENCE LINKING ===
     function parseBibleRef(ref) {
       // Match known book abbreviations from bookIndexMap
@@ -1013,6 +1101,14 @@
         renderFullCalendar();
         calendarView.style.display = 'block';
         bibleView.style.display = 'none';
+        // Scroll to current month
+        setTimeout(() => {
+          const currentMonth = new Date().getMonth();
+          const target = document.getElementById('month-' + currentMonth);
+          if (target) {
+            target.scrollIntoView({ behavior: 'smooth', block: 'start' });
+          }
+        }, 50);
       } else if (view === 'bible') {
         document.querySelectorAll('.tab-btn')[2].classList.add('active');
         todayView.style.display = 'none';
@@ -1028,6 +1124,7 @@
       const year = new Date().getFullYear();
       for (let month = 0; month < 12; month++) {
         const monthDiv = document.createElement('div');
+        monthDiv.id = 'month-' + month; // ← Required for scroll
         monthDiv.style.marginBottom = '16px';
         const monthHeader = document.createElement('div');
         monthHeader.textContent = months[month];
@@ -1080,22 +1177,14 @@
               dayEl.style.color = 'white';
             }
             if (!isCompleted && !isToday) {
-              // Make calendar day clickable → opens reading
               dayEl.style.cursor = 'pointer';
               dayEl.onclick = () => {
                 renderReadings(dayOfYear);
                 showTab('today');
               };
-              // Also make the text contain clickable links
               const en = READING_PLAN_EN[dayOfYear];
               const readings = [...en.morning, ...en.evening];
-              let html = readings.map(ref => 
-                `<div class="ref-en" style="font-size:0.85rem;margin:2px 0;">
-                  <a href="#" onclick="openBibleByRef('${ref}'); return false;">${ref}</a>
-                </div>`
-              ).join('');
               dayEl.title = readings.join(', ');
-              // Optional: show tooltip on hover (desktop)
             }
           }
           grid.appendChild(dayEl);
