Fix translation for 'Tit.' in index.html

--- a/index.html
+++ b/index.html
@@ -927,7 +927,7 @@
       "2 Thes.": "2 தெச.",
       "1 Tim.": "1 தீமோ.",
       "2 Tim.": "2 தீமோ.",
-      "*****.": "தீத்து.",
+      "Tit.": "தீத்து.",
       "Phm.": "பிலேமோ.",
       "Heb.": "எபிரே.",
       "Jam.": "யாக்கோ.",
